[package]
name = "etcd3-rs"
version = "0.1.0"
authors = ["Samani G. Gikandi <samani@gojulas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
prost = "0.6"
prost-types = "0.6.1"
tonic = "0.2.1"
log = "0.4.8"
tokio = { version = "0.2", features = ["rt-core"] }

[build-dependencies]
tonic-build = "0.2.0"
